# krap

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: build.yml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_init_table.rs  main.rs
src/: main.rs
src/application/: mod.rs
src/application/auth/: mod.rs
src/application/auth/api/: auth_service.rs  mod.rs
src/application/health/api/: health_service.rs  mod.rs
src/application/health/spi/: mod.rs
src/application/user/: mod.rs
src/application/user/api/: mod.rs  user_service.rs
src/application/user/spi/: user_repository.rs
src/domain/: common.rs  user.rs
src/infrastructure/: app_state.rs  mod.rs  openapi.rs  server.rs
src/infrastructure/http/: auth_handler.rs  error_handler.rs  health_handler.rs  mod.rs
src/infrastructure/http/common/: auth.rs  mod.rs  validator.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/seaorm/: db.rs  mod.rs
src/infrastructure/persistence/seaorm/entity/: mod.rs  prelude.rs  users.rs
src/infrastructure/persistence/seaorm/repository/: mod.rs  user_repository.rs
webapp/: README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
